fix for modal double scrollbar [amends #178]

--- a/src/stylesheets/components/_fsa.modal.scss
+++ b/src/stylesheets/components/_fsa.modal.scss
@@ -103,6 +103,13 @@
     background-color: $color-fsa-site-bg;
     background-clip: padding-box;
     box-shadow: 0 $size-default $size-default 0 rgba(0, 0, 0, .25);
+    overflow-y: auto;
+    height: $modal-height;
+
+    @include breakpoint(L) {
+      height: auto;
+      overflow-y: hidden;
+    }
   }
 
   &__content-bleed {
