--- a/src/stylesheets/core/_fsa.variables.scss
+++ b/src/stylesheets/core/_fsa.variables.scss
@@ -132,3 +132,8 @@ $form-between-space            : $size-base;
 
 $fsa-grid-gutter: ($base-font-size * 1.5);
 $fsa-grid-columns: 12;
+
+// ---------------------------------------------------------------------------
+// Component Settings
+
+$modal-height: 95vh;
